<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/laout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="320dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fimage"
                        android:layout_width="200dp"
                        android:layout_height="230dp"
                        android:layout_gravity="center" />

                    <LinearLayout
                        android:id="@+id/lnr_share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/tv_facebook"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_facebook" />

                        <View
                            android:layout_width="20dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/tv_instagram"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_instagram" />

                        <View
                            android:layout_width="20dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/tv_whatsapp"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_whatsapp" />

                        <View
                            android:layout_width="20dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/tv_share"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_more" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/love_this_app"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/do_u_have_a_few_sec"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_feedback"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/feedback"
                            android:textAllCaps="true"
                            android:textColor="@color/orange"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/rate_5_star"
                            android:textAllCaps="true"
                            android:textColor="@color/orange"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <com.google.android.gms.ads.NativeExpressAdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                ads:adSize="320x150"
                ads:adUnitId="@string/express_ad_unit_id" />

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view3"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="3dp">

                <LinearLayout
                    android:id="@+id/lnr_shareBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/recommended"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/if_u_hv_few_min"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


    <!--<RelativeLayout-->
    <!--android:id="@+id/btnlayout"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:visibility="gone">-->

    <!--<ImageButton-->
    <!--android:id="@+id/bshare"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:background="@drawable/share" />-->

    <!--<ImageButton-->
    <!--android:id="@+id/backbtn"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_marginRight="26dp"-->
    <!--android:layout_toLeftOf="@id/bshare"-->
    <!--android:background="@drawable/backk" />-->

    <!--<ImageButton-->
    <!--android:id="@+id/bsave"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_marginLeft="26dp"-->
    <!--android:layout_toRightOf="@id/bshare"-->
    <!--android:background="@drawable/save" />-->

    <!--</RelativeLayout>-->
</RelativeLayout>